--- a/Travalgram/index.html
+++ b/Travalgram/index.html
@@ -4,12 +4,15 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Travalgram | Perfil de viagens</title>
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
+
   <link rel="stylesheet" href="styles/index.css">
 
 </head>
 <body>
-  <p>
-    Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut corporis reiciendis enim dolorum illum repellendus cum porro quia, debitis labore ducimus ratione qui a unde maxime est repudiandae veritatis corrupti.
-  </p>
+  
 </body>
 </html>
