--- a/Travalgram/index.html
+++ b/Travalgram/index.html
@@ -12,7 +12,27 @@
   <link rel="stylesheet" href="styles/index.css">
 
 </head>
-<body>
+<body> 
+  <nav>
+    <a href="#" id="logo">
+      <img src="assests/Logo.svg" alt="Logomarca">
+
+    </a>
+    <ul id="primary-menu">
+      <li>
+        <a href="#">
+          <img src="assests/icons/MagnifyingGlass.svg" alt="icone de lupa">
+        </a>
+      </li>
+      <li><a href="#">Explorer</a></li>
+      <li><a href="#">Minhas viagens</a></li>
+      <li><a href="#"></a>
+      <img src="assests/img/Profile pic.png" alt="imagem de Isabela Torres"></li>
+    </ul>
+  </nav>
+  <header>
+   
+  </header>
   
 </body>
 </html>
