--- a/Travalgram/index.html
+++ b/Travalgram/index.html
@@ -12,8 +12,9 @@
   <link rel="stylesheet" href="styles/index.css">
 
 </head>
-<body> 
-  <nav>
+<body>
+  <div class="surface-color">
+   <nav class="container">
     <a href="#" id="logo">
       <img src="assests/Logo.svg" alt="Logomarca">
 
@@ -30,8 +31,9 @@
       <img src="assests/img/Profile pic.png" alt="imagem de Isabela Torres"></li>
     </ul>
   </nav>
+</div>
   <header>
-   
+    
   </header>
   
 </body>
