--- a/Travalgram/index.html
+++ b/Travalgram/index.html
@@ -76,6 +76,17 @@
 <img src="assests/img/Image 12.png" alt="">  
 </main>
 
+<footer class="container">
+  <span>
+    Travalgram  &copy; 2024
+  </span>
+  <span>
+    Termo de uso
+  </span>
+  <span>
+    Política de privacidade
+  </span>
+</footer>
 
 </body>
 </html>
