--- a/Noticias/index.html
+++ b/Noticias/index.html
@@ -7,15 +7,38 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Archivo:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="assests/index.css">
+  <link rel="stylesheet" href="styles/index.css">
 
   <title>Document</title>
 </head>
 <body>
-  <h1>Teste</h1>
-  <h2>subteste</h2>
-  
-  <a href="#">link</a>
+  <header class="container">
+    <nav id="primary" class="grid grid-flow-col">
+      <div>
+        <img src="assests/icons/List.svg" alt="Menu de opções">
+        <strong>Menu</strong>
+      </div>
+
+      <div>
+        <img src="assests/icons/Tech News.svg" alt="Logo">
+      </div>
+
+      <div>
+        <strong>Buscar</strong>
+        <img src="assests/icons/MagnifyingGlass.svg" alt="icone de pesquisa">
+
+      </div>
+    </nav>
+    <nav id="secondary" class="grid grid-flow-col">
+      <a href="#">Inteligência Artificial</a>
+      <a href="#">Blockchain</a>
+      <a href="#">Hologramas</a>
+      <a href="#">Internet</a>
+      <a href="#">Vestíveis</a>
+      <a href="#">Realidade Aumentada</a>
+      <a href="#">Realidade  Virtual</a>
+  </nav>
+  </header>
   
 </body>
 </html>
