--- a/Noticias/index.html
+++ b/Noticias/index.html
@@ -39,6 +39,27 @@
       <a href="#">Realidade  Virtual</a>
   </nav>
   </header>
+
+  <main class=" grid container">
+    <section id="featured" class=" grid grid-flow-col">
+      <div>
+        <img src="assests/images/Image 01.png" alt="">
+      </div>
+
+      <div>
+        <img src="assests/images/Image 02.png" alt="">
+      </div>
+      <div>
+        <img src="assests/images/Image 03.png" alt="">
+      </div>
+      <div>
+        <img src="assests/images/Image 04.png" alt="">
+      </div>
+      <div>
+        <img src="assests/images/Image 05.png" alt="">
+      </div>
+    </section>
+  </main>
   
 </body>
 </html>
