--- a/Noticias/index.html
+++ b/Noticias/index.html
@@ -41,11 +41,12 @@
   </header>
 
   <main class=" grid container">
-    <section id="featured" class=" grid grid-flow-col">
+    <section id="featured" class=" grid grid-flow-col gap-16">
       <div>
         <img src="assests/images/Image 01.png" alt="">
       </div>
 
+      <div class="grid grid-cols-2 gap-16">
       <div>
         <img src="assests/images/Image 02.png" alt="">
       </div>
@@ -58,6 +59,7 @@
       <div>
         <img src="assests/images/Image 05.png" alt="">
       </div>
+    </div>
     </section>
   </main>
   
