--- a/Noticias/index.html
+++ b/Noticias/index.html
@@ -42,9 +42,14 @@
 
   <main class=" grid container">
     <section id="featured" class=" grid grid-flow-col gap-16">
-      <div class="card">
+      <figure class="card"> <!--figure é quando ter alguma informação extra tipo um audio alguma descrição figcaption-->
         <img src="assests/images/Image 01.png" alt="">
-      </div>
+
+        <figcaption>
+          <span class="content-tag">robótica</span>
+          <h2 class="text-2xl">Robôs domésticos começam a ser adotados para tarefas diárias, prometendo mais conforto e eficiência nas residências.</h2>
+        </figcaption>
+      </figure>
 
       <div class="grid grid-cols-2 gap-16">
       <div>
