Portal de noticias

--- a/Noticias/index.html
+++ b/Noticias/index.html
@@ -255,7 +255,7 @@
         
           <article class="grid grid-flow-col gap-16">
           <div>
-            <img src="assests/images/Image 18.png" alt="">
+            <img src="assests/images/Image 18.png" alt="sms">
           </div>
           <div>
             <span class="content-tag">Impressão 3d</span>
