--- a/formulario2/index.html
+++ b/formulario2/index.html
@@ -14,11 +14,31 @@
 <body>
   <div id="app">
     <main>
-      <div class="main-container">main</div>
+      <div class="main-container">
+        <div class="back">
+          <img src="./assests/icons/arrow-left-02.svg" alt="">
+          <span>Voltar</span>
+
+          <h1>Formulário de matrícula</h1>
+          <p>Preencha os dados abaixo para matricular seu filho na escola de educação infantil Estrelas do Amanhã.</p>
+
+
+        </div>
+        
+      </div>
     </main>
 
     <aside>
-      <div class="aside-container">aside</div>
+      <div class="aside-container">
+      <header>
+        <img src="assests/icons/Frame 48095956.svg" alt="">
+        <h2>Porque cada momento de <span>aprendizado</span>  
+          conta</h2>
+        <p>Inscreva seu filho em nossa escola e veja-o florescer em um ambiente acolhedor, seguro e estimulante.</p>
+      </header>
+
+      <img src="assests/icons/Illustration.svg" alt="Ilustração de crianças aprendendo com sua professora">
+      </div>
     </aside>
   </div>
   
