--- a/formulario2/index.html
+++ b/formulario2/index.html
@@ -23,7 +23,7 @@
           <h1>Formulário de matrícula</h1>
           <p>Preencha os dados abaixo para matricular seu filho na escola de educação infantil Estrelas do Amanhã.</p>
 
-        <form method="post">
+        <form  action="" method="post" enctype="multipart/form-data">
           <fieldset class="child-info">
             <legend>Informações da criança</legend>
 
@@ -55,17 +55,19 @@
 
             <div class="textarea-wrapper">
               <label for="medical-info">Informações médicas</label>
-              <textarea name="medical-info" id="medical-info"
-                cols="30" row="10"
+              <textarea name= "medical-info"
+               id= "medical-info"  
+                cols="30" 
+                rows="10"
                 placeholder="A criança possui alguma condição médica que a escola deve estar ciente? (Se sim, especifique)"></textarea>
+              </div>
 
                 <div class="droparea-wrapper">
                   <input type="file" name="birth-file" id="birth-file">
                   <img src="assests/icons/cloud-upload.svg" alt="">
-                  <p>Clique aqui para selecionar os arquivos</p>
-
+                  <p>Clique aqui para </br> os arquivos</p>
+                
                 </div>
-            </div>
           </fieldset>
         </form>
         
