--- a/formulario2/index.html
+++ b/formulario2/index.html
@@ -123,6 +123,32 @@
 
         </fieldset>
 
+        <fieldset class="gardian">
+          <legend>Informações do Responsável</legend>
+          <div class="input-wrapper">
+            <label for="gardian">Nome do responsável</label>
+            <input type="text" id="gardian" name="gardian">
+            <small>Principal responsável legal e contato de emergência</small>
+          </div>
+
+          <div class="input-wrapper">
+            <label for="phone">Telefone</label>
+            <input type="tel" id="phone" name="phone"
+            placeholder="(10) 9 8765-4321">
+          </div>
+
+          <div class="input-wrapper">
+            <label for="mail">E-mail</label>
+            <input type="email" id="mail" name="mail"
+            placeholder="Ex:papailegal123" required>
+            <div class="error">
+              <img src="assests/icons/alert-circle.svg" alt="icone de error">
+            <span>Insira um e-mail válido</span>
+          </div>
+        </div>
+
+        </fieldset>
+
         </form>
         </div>
       </main>
