--- a/formulario2/index.html
+++ b/formulario2/index.html
@@ -149,6 +149,31 @@
 
         </fieldset>
 
+        <fieldset class="enroll-options">
+          <legend>Opções de matrícula</legend>
+          
+          <div class="input-wrapper">
+            <label>Selecione o turno de estudo</label>
+            
+            <div class="radio-wrapper">
+              <div class="radio-inner">
+                <div class="radio-image"></div>
+                <input type="radio" name="study-shift" value="morning" id="morning">
+                <img src="assests/icons/sun-cloud-02.svg" alt="icone de sol com nuvem">
+                <label for="morning">Manhã</label>
+              </div>
+
+              <div class="radio-inner">
+                <div class="radio-image"></div>
+                <input type="radio" name="study-shift" value="evening" id="evening">
+                <img src="assests/icons/sun-02.svg" alt="icone de sol">
+                <label for="evening">Tarde</label>
+
+
+            </div>
+          </div>
+        </fieldset>
+
         </form>
         </div>
       </main>
