--- a/formulario2/index.html
+++ b/formulario2/index.html
@@ -172,6 +172,53 @@
 
             </div>
           </div>
+
+          <div class="input-wrapper">
+            <label>Em qual esporte você gostaria de inscrever seu filho?</label>
+              <div class="radio-wrapper">
+                <div class="radio-inner">
+                    <div class="radio-image"></div>
+                    <input type="radio" name="sport" id="football">
+                    <img src="assests/icons/football.svg" alt="icone de futebol">
+                    <label for="football">Futebol</label>
+                  </div>
+                
+                <div class="radio-inner">
+                <div class="radio-image"></div>
+                <input type="radio" name="sport" id="basketball">
+                <img src="assests/icons/basketball-02.svg" alt="icone de basquete">
+                <label for="basketball">Basquete</label>
+              </div>
+
+              <div class="radio-inner">
+                <div class="radio-image"></div>
+                <input type="radio" name="sport" id="swimming">
+                <img src="assests/icons/swimming.svg" alt="icone de natação">
+                <label for="swimming">Natação</label>
+              </div>
+
+              <div class="radio-inner">
+                <div class="radio-image"></div>
+                <input type="radio" name="sport" id="yoga">
+                <img src="assests/icons/yoga-02.svg" alt="icone de yoga">
+                <label for="yoga">Yoga</label>
+              </div>
+
+              <div class="radio-inner">
+                <div class="radio-image"></div>
+                <input type="radio" name="sport" id="volleyball">
+                <img src="assests/icons/volleyball.svg" alt="icone de volei">
+                <label for="volleyball">Volley</label>
+              </div>
+
+              <div class="radio-inner">
+                <div class="radio-image"></div>
+                <input type="radio" name="sport" id="boxing">
+                <img src="assests/icons/boxing-glove-01.svg" alt="icone de boxe">
+                <label for="boxing">Boxe</label>
+              </div>
+            </div>
+          </div>
         </fieldset>
 
         </form>
