adicionando classe utilitarias

--- a/zingen/index.html
+++ b/zingen/index.html
@@ -11,6 +11,19 @@
 
 </head>
 <body>
-  <h1>hellow word</h1>  
+  <header>
+    <div class="container even-colums">
+      <h2>lado a</h2>
+      <h2>lado b</h2>
+  </div>
+    <nav>
+      <img src="assests/icons/Logo.svg" alt="">
+     
+
+  </nav> 
+</header>
+<main></main>
+  <aside></aside>
+  <footer></footer>
 </body>
 </html>
