aplicando os botoes part1

--- a/zingen/index.html
+++ b/zingen/index.html
@@ -10,11 +10,11 @@
     <title>Zingen</title>
 
 </head>
-<body>
+<body> <div class="flex gap-1">
+  <a href="#" class="btn btn-sm">Label</a>
+  <a href="#" class="btn btn-md">Label</a>
+  <button href="#" class="btn btn-lg">Label</button></div>
   <header>
-    <div class="container even-colums">
-      <h2>lado a</h2>
-      <h2>lado b</h2>
   </div>
     <nav>
       <img src="assests/icons/Logo.svg" alt="">
