--- a/zingen/index.html
+++ b/zingen/index.html
@@ -10,10 +10,24 @@
     <title>Zingen</title>
 
 </head>
-<body> <div class="flex gap-1">
+<body>
+   <div class="flex gap-1">
   <a href="#" class="btn btn-sm">Label</a>
   <a href="#" class="btn btn-md">Label</a>
-  <button href="#" class="btn btn-lg">Label</button></div>
+  <button href="#" class="btn btn-lg">Label</button>
+</div>
+
+<div class="flex gap-1">
+  <a
+  aria-label="Label" 
+  href="#" class="btn btn-sm"></a>
+  <a 
+  aria-label="Label" 
+  href="#" class="btn btn-md"></a>
+  <button 
+  aria-label="Label" 
+  href="#" class="btn btn-lg"></button>
+</div>
   <header>
   </div>
     <nav>
