--- a/zingen/index.html
+++ b/zingen/index.html
@@ -11,22 +11,21 @@
 
 </head>
 <body>
-  <a href="#" class="social" aria-label="tiktok"></a>
-  <a href="#" class="social"aria-label="instagram"></a>
-  <a href="#" class="social" aria-label="twitter"></a>
-  <a href="#" class="social" aria-label="discord"></a>
-  <ul role="list">
-    <li>
-      <a href="#">Label</a>
-    </li>
-  </ul>
   <header>
-  </div>
-    <nav>
-      <img src="assests/icons/Logo.svg" alt="">
-     
+  <div class="container py-base">
+    <nav class="flex items-center gap-1.5">
+      <a href="#">
+      <img src="assests/icons/Logo.svg" alt="logo Zingen">
+    </a>
 
+    <a href="#about" class="desktop-only">Conheça o app</a>
+    <a href="#features" class="desktop-only">Funcionalidades</a>
+    <a href="#pricing" class="desktop-only">Planos e preço</a>
+
+
+    <a href="#download" class="btn btn-sm">Baixar agora</a>   
   </nav> 
+</div>
 </header>
 <main></main>
   <aside></aside>
