--- a/zingen/index.html
+++ b/zingen/index.html
@@ -27,8 +27,22 @@
   </nav> 
 </div>
 </header>
-<main></main>
-  <aside></aside>
+<section id="hero">
+  <div class="container py-xl">
+    <img src="assests/icons/music-bars.svg" alt="">
+    <h1>Quem canta seus males espanta</h1>
+    <p>Cantar nunca foi tão fácil</p>
+
+    <div class="buttons flex items-center gap-1">
+      <a href="#pricing" aria-label="Ver planos" class="btn btn-md"></a>
+      <a href="#download" class="btn btn-md">Baixar agora</a>
+    </div>
+  </div>
+
+</section>
+<main>
+</main>
+  
   <footer></footer>
 </body>
 </html>
