--- a/zingen/index.html
+++ b/zingen/index.html
@@ -16,7 +16,7 @@
     <nav class="flex items-center gap-1.5">
       <a href="#">
       <img src="assests/icons/Logo.svg" alt="logo Zingen">
-    </a>
+      </a>
 
     <a href="#about" class="desktop-only">Conheça o app</a>
     <a href="#features" class="desktop-only">Funcionalidades</a>
@@ -38,6 +38,31 @@
       <a href="#download" class="btn btn-md">Baixar agora</a>
     </div>
   </div>
+
+</section>
+
+<section id="smartphone-img">
+  <div class="container">  
+    <img src="assests/App mockups.png" alt="">
+</div>
+</section>
+
+<section id="about">
+<div class="container even-colums py-xl items-center">
+  <div>
+    <header>
+      <strong>Conheça o app</strong>
+      <h2>O aplicativo perfeito para aprender a cantar</h2>
+     </header>
+      <p>Nosso algoritmo de Inteligência Artificial permite remover a voz original e manter as melodias das músicas. Dessa forma, temos o maior repertório musical para Karaokê! Além disso, ao cantar, sua voz e afinação é comparada pelo algoritmo permitindo uma avaliação precisa da sua performance te ajudando a melhorar seu canto. </p>
+   </div>
+  
+   <div>
+    <img
+    class="desktop-only"
+    src="assests/App mockups.png" alt="">
+  </div>
+</div>
 
 </section>
 <main>
