--- a/zingen/index.html
+++ b/zingen/index.html
@@ -179,6 +179,34 @@
   
   </div>
 </section>
+
+<section id="download">
+  <div class="container py-xl">
+    <div class="card px-lg even-colums items-center">
+      <div>
+        <header>
+          <strong>download</strong>
+          <h2>Bora cantar?</h2>
+        </header>
+
+        <p>
+          Desperte seu potencial de estrela, liberte sua voz e faça parte da comunidade musical mais envolvente. Baixe o Zingen agora e transforme suas performances em experiências inesquecíveis!
+        </p>
+
+       <div class="buttons flex gap-1">
+        <a href="#">
+          <img src="assests/icons/button-app-store.svg" alt="Baixar app store">
+        </a>
+          <a href="#">
+          <img src="assests/icons/button-google-play.svg" alt="Baixar da play store">
+        </a>
+       </div> 
+     </div>
+      
+      <img src="assests/rapaz-ouvindo-musica-com-fones-de-ouvido-e-cantando-no-aplicativo-de-karaoke-removebg 1.png" alt="">
+    </div>
+  </div>
+</section>
   
   <footer></footer>
 </body>
