--- a/Patins/index.html
+++ b/Patins/index.html
@@ -29,14 +29,27 @@
   <section class="hero">
     
     <div>
-      <h1>Snitap, sua vida mais
+      <h1>
+        Snitap, sua vida mais
         <div>
     <span>radical</span>
     <span>divertida</span>
     <span>saudável</span>
     <span>radical</span>
   </div> 
-</h1>
+  </h1>
+
+  <div class="buttons">
+    <a href="#" class="button buy shadow">
+    <img src="assests/icons/shopping-bag-01.svg" alt=""> COMPRAR AGORA</a>
+
+      <a href="#" class="button play">
+        <span class="shadow">
+          <img src="assests/icons/play.svg" alt="">
+        </span>
+        VEJA EM AÇÃO
+      </a>
+  </div>
 </div>
   </section>
 
