animation hero image

--- a/Patins/index.html
+++ b/Patins/index.html
@@ -51,6 +51,16 @@
       </a>
   </div>
 </div>
+
+  <div>
+    <div class="content">
+      <img src="assests/icons/Ellipse.svg" alt="">
+      <img src="assests/patins-image.png" alt="">
+      <img src="assests/icons/Stars1.svg" alt="">
+      <img src="assests/icons/Stars2.svg" alt="">
+    </div>
+  </div>
+
   </section>
 
 
