--- a/Patins/index.html
+++ b/Patins/index.html
@@ -14,7 +14,7 @@
   <title>Patins</title>
 </head>
 <body>
-  <header>
+  <header class="top">
     <a href="#">
       <img src="assests/icons/logo.svg" alt="">
     </a>
@@ -97,6 +97,47 @@
     </div>
   </section>
 
+  <section class="gallery">
+    <header>
+      <span>GALERIA DE FOTOS</span>
+      <H2>#usesntap por aí</H2>
+    </header>
+
+    <div class="content">
+      <figure>
+        <img src="assests/image 01.png" alt="">
+        <figcaption>
+         <img src="assests/insta pic.png" alt="">
+         <span>@laviniapereira</span>
+        </figcaption>
+      </figure>
+
+      <figure data-delay>
+        <img src="assests/image 02.png" alt="">
+        <figcaption>
+         <img src="assests/insta pic.png" alt="">
+         <span>@laviniapereira</span>
+        </figcaption>
+      </figure>
+
+      <figure>
+        <img src="assests/image 03.png" alt="">
+        <figcaption>
+         <img src="assests/insta pic.png" alt="">
+         <span>@laviniapereira</span>
+        </figcaption>
+      </figure>
+
+      <figure data-delay>
+        <img src="assests/image 04.png" alt="">
+        <figcaption>
+         <img src="assests/insta pic.png" alt="">
+         <span>@laviniapereira</span>
+        </figcaption>
+      </figure>
+
+    </div>
+  </section>
 
 </body>
 </html>
