--- a/Patins/index.html
+++ b/Patins/index.html
@@ -139,5 +139,33 @@
     </div>
   </section>
 
+  <footer>
+    <div class="logo">
+      <img src="assests/icons/logo.svg" alt="">
+      Snitap
+    </div>
+    <nav>
+      <a href="#">Sobre</a>
+      <a href="#">Nossas lojas</a>
+      <a href="#">Política de privacidade</a>
+    </nav>
+
+    <div class="social-links">
+      <a href="#" title="instagram">
+        <img src="assests/icons/mdi_instagram.svg" alt="">
+      </a>
+
+      <a href="#" title="instagram">
+        <img src="assests/icons/ic_baseline-facebook.svg" alt="">
+      </a>
+      <a href="#" title="instagram">
+        <img src="assests/icons/mdi_youtube.svg" alt="">
+      </a>
+      <a href="#" title="tiktok">
+        <img src="assests/icons/ic_baseline-tiktok.svg" alt="">
+      </a>
+    </div>
+  </footer>
+
 </body>
 </html>
